tests/ui-fulldeps/rustc-dev-remap.remap-unremap.stderr
error[E0277]: the trait bound `NotAValidResultType: VisitorResult` is not satisfied
  --> $DIR/rustc-dev-remap.rs:LL:COL
   |
LL |     type Result = NotAValidResultType;
   |                   ^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `VisitorResult` is not implemented for `NotAValidResultType`
  --> $DIR/rustc-dev-remap.rs:LL:COL
   |
LL | struct NotAValidResultType;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: the following other types implement trait `VisitorResult`:
             ()
             ControlFlow<T>
note: required by a bound in `rustc_ast::visit::Visitor::Result`
  --> $COMPILER_DIR_REAL/rustc_ast/src/visit.rs:LL:COL
   |
LL | common_visitor_and_walkers!(Visitor<'a>);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Visitor::Result`
   = note: this error originates in the macro `common_visitor_and_walkers` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
